fix(FormField): add overflow style

--- a/packages/vkui/src/components/FormField/FormField.module.css
+++ b/packages/vkui/src/components/FormField/FormField.module.css
@@ -21,6 +21,7 @@
   display: flex;
   align-items: center;
   flex-grow: 1;
+  overflow: hidden;
 }
 
 .FormField--sizeY-compact {
